--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 		                        <span class="etoilebleu"><i class="fas fa-star"></i></span>
 		                        <span class="etoilebleu"><i class="fas fa-star"></i></span>
 		                        <span class="etoilebleu"><i class="fas fa-star"></i></span>	
-                                <span class="etoilegrise"><i class="fas fa-star"></i></span>
+                                <span class="etoilebleu"><i class="fas fa-star"></i></span>	
                             </div> 
  						</a>
  					</div>
@@ -126,7 +126,7 @@
                                 <span class="etoilebleu"><i class="fas fa-star"></i></span>
 		                        <span class="etoilebleu"><i class="fas fa-star"></i></span>
 		                        <span class="etoilebleu"><i class="fas fa-star"></i></span>
-		                        <span class="etoilebleu"><i class="fas fa-star"></i></span>	
+		                        <span class="etoilegrise"><i class="fas fa-star"></i></span>	
                                 <span class="etoilegrise"><i class="fas fa-star"></i></span>
                             </div> 
  						</a>
@@ -157,7 +157,7 @@
 		                        <span class="etoilebleu"><i class="fas fa-star"></i></span>
 		                        <span class="etoilebleu"><i class="fas fa-star"></i></span>
 		                        <span class="etoilebleu"><i class="fas fa-star"></i></span>	
-                                <span class="etoilegrise"><i class="fas fa-star"></i></span>
+                                <span class="etoilebleu"><i class="fas fa-star"></i></span>	
                             </div> 
  						</a>
  					</div>
@@ -166,53 +166,60 @@
  			</div>
 
 			<aside class="lespluspopulaires">
-				<h3>Les plus populaires</h3>
-					<div class="charticon">
+				<h3>Les plus populaires
+					<span class="charticon">
                     	<i class="fas fa-chart-line"></i>
-                	</div>
+                	</span>
+                </h3><br>
 					<div class="populaires">
 						<div class="boxpopulaire">
 							<a href="index.html" id="hotellesoleildumatin">
-								<img src="C:/Users/azert/Documents/secondProjet/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="hotellesoleildumatin" class="hotellesoleildumatin" width="230" height="130"/>
-								<h4>Hôtel Le soleil du matin</h4>
-								<p>Nuit à partir de <strong>128€</strong>
-								<div class="etoiles">
-                                	<span class="etoilebleu"><i class="fas fa-star"></i></span>
-		                            <span class="etoilebleu"><i class="fas fa-star"></i></span>
-		                            <span class="etoilebleu"><i class="fas fa-star"></i></span>
-		                            <span class="etoilebleu"><i class="fas fa-star"></i></span>	
-                                	<span class="etoilegrise"><i class="fas fa-star"></i></span>
-                            	</div> 
+								<img src="C:/Users/azert/Documents/secondProjet/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="hotellesoleildumatin" class="hotellesoleildumatin" width="300" height="200"/>
+								<div class="texte">
+									<h5>Hôtel Le soleil du matin</h5>
+									<p>Nuit à partir de <strong>128€</strong>
+									<div class="etoilespopulaire">
+                                		<span class="etoilebleu"><i class="fas fa-star"></i></span>
+		                            	<span class="etoilebleu"><i class="fas fa-star"></i></span>
+		                            	<span class="etoilebleu"><i class="fas fa-star"></i></span>
+		                            	<span class="etoilebleu"><i class="fas fa-star"></i></span>	
+                                		<span class="etoilegrise"><i class="fas fa-star"></i></span>
+                            		</div> 
+                            	</div>
 							</a>
 						</div>
 
  						<div class="boxpopulaire">
  							<a href="index.html" id="aucoeurdeleau">
- 								<img src="C:/Users/azert/Documents/secondProjet/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="aucoeurdeleau" class="aucoeurdeleau" width="230" height="130"/>
- 								<h4>Au coeur de l'eau Chambres d'hôtes</h4>
- 								<p>Nuit à partir de <strong>71€</strong>
- 								<div class="etoiles">
-                                	<span class="etoilebleu"><i class="fas fa-star"></i></span>
-		                            <span class="etoilebleu"><i class="fas fa-star"></i></span>
-		                            <span class="etoilebleu"><i class="fas fa-star"></i></span>
-		                            <span class="etoilebleu"><i class="fas fa-star"></i></span>	
-                                	<span class="etoilegrise"><i class="fas fa-star"></i></span>
+ 								<img src="C:/Users/azert/Documents/secondProjet/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="aucoeurdeleau" class="aucoeurdeleau" width="300" height="200"/>
+ 								<div class="texte">
+ 									<h5>Au coeur de l'eau Chambres d'hôtes</h5>
+ 									<p>Nuit à partir de <strong>71€</strong>
+ 									<div class="etoilespopulaire">
+                                		<span class="etoilebleu"><i class="fas fa-star"></i></span>
+		                            	<span class="etoilebleu"><i class="fas fa-star"></i></span>
+		                            	<span class="etoilebleu"><i class="fas fa-star"></i></span>
+		                            	<span class="etoilebleu"><i class="fas fa-star"></i></span>	
+                                		<span class="etoilegrise"><i class="fas fa-star"></i></span>
+                            		</div>
                             	</div> 
  							</a>
  						</div>
 
  						<div class="boxpopulaire">
  							<a href="index.html" id="hoteltoutbleuetblanc">
- 								<img src="C:/Users/azert/Documents/secondProjet/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="hoteltoutbleuetblanc" class="hoteltoutbleuetblanc" width="230" height="130"/>
- 								<h4>Hôtel Tout bleu et Blanc</h4>
- 								<p>Nuit à partir de <strong>68€</strong></p>
- 								<div class="etoiles">
-                                	<span class="etoilebleu"><i class="fas fa-star"></i></span>
-		                            <span class="etoilebleu"><i class="fas fa-star"></i></span>
-		                            <span class="etoilebleu"><i class="fas fa-star"></i></span>
-		                            <span class="etoilebleu"><i class="fas fa-star"></i></span>	
-                                	<span class="etoilegrise"><i class="fas fa-star"></i></span>
-                            	</div> 
+ 								<img src="C:/Users/azert/Documents/secondProjet/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="hoteltoutbleuetblanc" class="hoteltoutbleuetblanc" width="300" height="200"/>
+ 								<div class="texte">
+ 									<h5>Hôtel Tout bleu et Blanc</h5>
+ 									<p>Nuit à partir de <strong>68€</strong></p>
+ 									<div class="etoilespopulaire">
+                                		<span class="etoilebleu"><i class="fas fa-star"></i></span>
+		                            	<span class="etoilebleu"><i class="fas fa-star"></i></span>
+		                            	<span class="etoilebleu"><i class="fas fa-star"></i></span>
+		                           		<span class="etoilebleu"><i class="fas fa-star"></i></span>	
+                                		<span class="etoilegrise"><i class="fas fa-star"></i></span>
+                            		</div> 
+                            	</div>
  							</a>
  						</div>
  					</div>
@@ -221,49 +228,50 @@
 
 <!-- Section 4  -->
 
-		<section class="activites">
-			<h3>Activités à Marseille</h3>
-			<div class="activitesection">
-				<div class="activite1">
+		<section class="activitesection">
+			<h3 class="activitemarseille">Activités à Marseille</h3>
+			<div class="activites">
+				<div class="boxactivite1">
 					<a href="index.html" id="vieuxport">
-						<img src="C:/Users/azert/Documents/secondProjet/images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="vieuxport" class="vieuxport" width="270" height="350"/>
+						<img src="C:/Users/azert/Documents/secondProjet/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="vieuxport" class="vieuxport" width="350" height="450"/>
 						<h4>Vieux Port</h4>
 					</a>
 				</div>
 
- 				<div class="activite2">
- 					<a href="index.html" id="portdepomegues">
- 						<img src="C:/Users/azert/Documents/secondProjet/images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="portdepomegues" class="portdepomegues" width="270" height="180"/>
- 						<h4>Port de Pomègues</h4>
- 					</a>
- 				</div>
+ 				<div class="boxactivite2">
+ 					<figure class="box1">
+ 						<a href="index.html" id="portdepomegues">
+ 							<img src="C:/Users/azert/Documents/secondProjet/images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="portdepomegues" class="portdepomegues" width="350" height="200"/>
+ 							<h4>Port de Pomègues</h4>
+ 						</a>
+ 					</figure>
+ 					<figure class="box2">
+ 						<a href="index.html" id="ilesdufrioul">
+ 							<img src="C:/Users/azert/Documents/secondProjet/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="ilesdufrioul" class="ilesdufrioul" width="350" height="200"/>
+ 							<h4>Iles du Frioul</h4>
+ 						</a>
+ 					</figure>
 
- 				<div class="activite3">
- 					<a href="index.html" id="ilesdufrioul">
- 						<img src="C:/Users/azert/Documents/secondProjet/images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="ilesdufrioul" class="ilesdufrioul" width="270" height="130"/>
- 						<h4>Iles du Frioul</h4>
- 					</a>
- 				</div>
-
- 				<div class="activite4">
+ 				<div class="boxactivite1">
  					<a href="index.html" id="parcnational">
- 						<img src="C:/Users/azert/Documents/secondProjet/images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="parcnational" class="parcnational" width="270" height="350"/>
+ 						<img src="C:/Users/azert/Documents/secondProjet/images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="parcnational" class="parcnational" width="350" height="450"/>
  						<h4>Parc National des Calanques</h4>
  					</a>
  				</div>
 
-				<div class="activite5">
-					<a href="index.html" id="notredame">
-						<img src="C:/Users/azert/Documents/secondProjet/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="notredame" class="notredame" width="270" height="150"/>
-						<h4>Notre-Dame-de-la-Garde"</h4>
-					</a>
-				</div>
-
-				<div class="activite5">
-					<a href="index.html" id="parclongchamp">
-						<img src="C:/Users/azert/Documents/secondProjet/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="parclongchamp" class="parclongchamp" width="270" height="150"/>
-						<h4>Parc Longchamp</h4>
-					</a>
+				<div class="boxactivite2">
+					<figure class="box1">
+						<a href="index.html" id="notredame">
+							<img src="C:/Users/azert/Documents/secondProjet/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="notredame" class="notredame" width="350" height="150"/>
+							<h4>Notre-Dame-de-la-Garde"</h4>
+						</a>
+					</figure>
+					<figure class="box2">
+						<a href="index.html" id="parclongchamp">
+							<img src="C:/Users/azert/Documents/secondProjet/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="parclongchamp" class="parclongchamp" width="350" height="150"/>
+							<h4>Parc Longchamp</h4>
+						</a>
+					</figure>
 				</div>
 			</div>
 		</section>
