--- a/index.html
+++ b/index.html
@@ -231,47 +231,48 @@
 		<section class="activitesection">
 			<h3 class="activitemarseille">Activités à Marseille</h3>
 			<div class="activites">
-				<div class="boxactivite1">
+				<div class="activite1">
 					<a href="index.html" id="vieuxport">
 						<img src="C:/Users/azert/Documents/secondProjet/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="vieuxport" class="vieuxport" width="350" height="450"/>
 						<h4>Vieux Port</h4>
 					</a>
 				</div>
 
- 				<div class="boxactivite2">
- 					<figure class="box1">
+ 				<div class="activite2et3">
+ 					<div class="activite2">
  						<a href="index.html" id="portdepomegues">
- 							<img src="C:/Users/azert/Documents/secondProjet/images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="portdepomegues" class="portdepomegues" width="350" height="200"/>
+ 							<img src="C:/Users/azert/Documents/secondProjet/images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="portdepomegues" class="portdepomegues" width="350" height="170"/>
  							<h4>Port de Pomègues</h4>
  						</a>
- 					</figure>
- 					<figure class="box2">
+ 					</div>
+ 					<div class="activite3">
  						<a href="index.html" id="ilesdufrioul">
- 							<img src="C:/Users/azert/Documents/secondProjet/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="ilesdufrioul" class="ilesdufrioul" width="350" height="200"/>
+ 							<img src="C:/Users/azert/Documents/secondProjet/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="ilesdufrioul" class="ilesdufrioul" width="350" height="170"/>
  							<h4>Iles du Frioul</h4>
  						</a>
- 					</figure>
+ 					</div>
+ 				</div>
 
- 				<div class="boxactivite1">
+ 				<div class="activite4">
  					<a href="index.html" id="parcnational">
  						<img src="C:/Users/azert/Documents/secondProjet/images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="parcnational" class="parcnational" width="350" height="450"/>
  						<h4>Parc National des Calanques</h4>
  					</a>
  				</div>
 
-				<div class="boxactivite2">
-					<figure class="box1">
+				<div class="activite5et6">
+					<div class="activite5">
 						<a href="index.html" id="notredame">
-							<img src="C:/Users/azert/Documents/secondProjet/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="notredame" class="notredame" width="350" height="150"/>
-							<h4>Notre-Dame-de-la-Garde"</h4>
+							<img src="C:/Users/azert/Documents/secondProjet/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="notredame" class="notredame" width="350" height="170"/>
+							<h4>Notre-Dame-de-la-Garde</h4>
 						</a>
-					</figure>
-					<figure class="box2">
+					</div>
+					<div class="activite6">
 						<a href="index.html" id="parclongchamp">
-							<img src="C:/Users/azert/Documents/secondProjet/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="parclongchamp" class="parclongchamp" width="350" height="150"/>
+							<img src="C:/Users/azert/Documents/secondProjet/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="parclongchamp" class="parclongchamp" width="350" height="170"/>
 							<h4>Parc Longchamp</h4>
 						</a>
-					</figure>
+					</div>
 				</div>
 			</div>
 		</section>
