--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 		<div class="info">
 			<span class="iconinfo"><i class="fas fa-info" aria-hidden="true"></i></span>
-			<p>Plus de 500 logements sont disponibles dans cette ville.</p>
+			<p>Plus de 500 logements sont disponibles dans cette ville</p>
 		</div>
 		
 
@@ -98,7 +98,7 @@
  						<a href="index.html" id="hotelduport">
  							<img src="C:/Users/azert/Documents/secondProjet/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="hotelduport" class="imgheb" width="250" height="130"/>
  							<h4>Hôtel du port</h4>
- 							<p>Nuit à partir de <strong>52€</strong></p>
+ 							<p>Nuit à partir de 52<strong>€</strong></p>
  							<div class="etoiles">
                                 <div class="etoilebleu"><i class="fas fa-star"></i></div>
 		                        <div class="etoilebleu"><i class="fas fa-star"></i></div>
@@ -113,7 +113,7 @@
  						<a href="index.html" id="hotellesmouettes">
  							<img src="C:/Users/azert/Documents/secondProjet/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="hotellesmouettes" class="imgheb" width="250" height="130"/>
  							<h4>Hôtel Les Mouettes</h4>
- 							<p>Nuit à partir de <strong>76€</strong></p>
+ 							<p>Nuit à partir de 76<strong>€</strong></p>
  							<div class="etoiles">
                                 <div class="etoilebleu"><i class="fas fa-star"></i></div>
 		                        <div class="etoilebleu"><i class="fas fa-star"></i></div>
@@ -143,7 +143,7 @@
  						<a href="index.html" id="aubergelepanier">
  							<img src="C:/Users/azert/Documents/secondProjet/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="aubergelepanier" class="imgheb" width="250" height="130"/>
  							<h4>Auberge le Panier</h4>
- 							<p>Nuit à partir de <strong>23€</strong></p>
+ 							<p>Nuit à partir de 23<strong>€</strong></p>
  							<div class="etoiles">
                             	<div class="etoilebleu"><i class="fas fa-star"></i></div>
 		                        <div class="etoilebleu"><i class="fas fa-star"></i></div>
@@ -158,7 +158,7 @@
  						<a href="index.html" id="hotelchezamina">
  							<img src="C:/Users/azert/Documents/secondProjet/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="hotelchezamina" class="imgheb" width="250" height="130"/>
  							<h4>Hôtel chez Amina</h4>
- 							<p>Nuit à partir de <strong>96€</strong></p>
+ 							<p>Nuit à partir de 96<strong>€</strong></p>
  							<div class="etoiles">
                                 <div class="etoilebleu"><i class="fas fa-star"></i></div>
 		                        <div class="etoilebleu"><i class="fas fa-star"></i></div>
@@ -169,7 +169,7 @@
  						</a>
  					</div>
  				</section>
- 				<a href="afficherplus">Afficher plus</a>
+ 				<a href="#" class="afficherplus">Afficher plus</a>
  			</div>
 
 			<aside class="lespluspopulaires">
@@ -184,7 +184,7 @@
 								<img src="C:/Users/azert/Documents/secondProjet/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="hotellesoleildumatin" class="imagepopulaire" width="250" height="150"/>
 								<div class="texte">
 									<h5>Hôtel Le soleil du matin</h5>
-									<p>Nuit à partir de <strong>128€</strong>
+									<p>Nuit à partir de 128<strong>€</strong>
 									<div class="etoiles">
                                 		<div class="etoilebleu"><i class="fas fa-star"></i></div>
 		                            	<div class="etoilebleu"><i class="fas fa-star"></i></div>
@@ -201,7 +201,7 @@
  								<img src="C:/Users/azert/Documents/secondProjet/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="aucoeurdeleau" class="imagepopulaire" width="250" height="150"/>
  								<div class="texte">
  									<h5>Au coeur de l'eau Chambres d'hôtes</h5>
- 									<p>Nuit à partir de <strong>71€</strong>
+ 									<p>Nuit à partir de 71<strong>€</strong>
  									<div class="etoiles">
                                 		<div class="etoilebleu"><i class="fas fa-star"></i></div>
 		                            	<div class="etoilebleu"><i class="fas fa-star"></i></div>
@@ -218,7 +218,7 @@
  								<img src="C:/Users/azert/Documents/secondProjet/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="hoteltoutbleuetblanc" class="imagepopulaire" width="250" height="150"/>
  								<div class="texte">
  									<h5>Hôtel Tout bleu et Blanc</h5>
- 									<p>Nuit à partir de <strong>68€</strong></p>
+ 									<p>Nuit à partir de 68<strong>€</strong></p>
  									<div class="etoiles">
                                 		<div class="etoilebleu"><i class="fas fa-star"></i></div>
 		                            	<div class="etoilebleu"><i class="fas fa-star"></i></div>
@@ -240,7 +240,7 @@
 			<div class="activites">
 				<div class="activite1">
 					<a href="index.html" id="vieuxport">
-						<img src="C:/Users/azert/Documents/secondProjet/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="vieuxport" class="imgactivbig" width="350" height="450"/>
+						<img src="C:/Users/azert/Documents/secondProjet/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="vieuxport" class="imgactivbig" width="450" height="550"/>
 						<h4>Vieux Port</h4>
 					</a>
 				</div>
@@ -248,13 +248,13 @@
  				<div class="activite2et3">
  					<div class="activite2">
  						<a href="index.html" id="portdepomegues">
- 							<img src="C:/Users/azert/Documents/secondProjet/images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="portdepomegues" class="imgactiv" width="350" height="170"/>
+ 							<img src="C:/Users/azert/Documents/secondProjet/images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="portdepomegues" class="imgactiv1" width="450" height="230"/>
  							<h4>Port de Pomègues</h4>
  						</a>
  					</div>
  					<div class="activite3">
  						<a href="index.html" id="ilesdufrioul">
- 							<img src="C:/Users/azert/Documents/secondProjet/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="ilesdufrioul" class="imgactiv" width="350" height="170"/>
+ 							<img src="C:/Users/azert/Documents/secondProjet/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="ilesdufrioul" class="imgactiv2" width="450" height="170"/>
  							<h4>Iles du Frioul</h4>
  						</a>
  					</div>
@@ -262,7 +262,7 @@
 
  				<div class="activite4">
  					<a href="index.html" id="parcnational">
- 						<img src="C:/Users/azert/Documents/secondProjet/images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="parcnational" class="imgactivbig" width="350" height="450"/>
+ 						<img src="C:/Users/azert/Documents/secondProjet/images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="parcnational" class="imgactivbig" width="450" height="550"/>
  						<h4>Parc National des Calanques</h4>
  					</a>
  				</div>
@@ -270,13 +270,13 @@
 				<div class="activite5et6">
 					<div class="activite5">
 						<a href="index.html" id="notredame">
-							<img src="C:/Users/azert/Documents/secondProjet/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="notredame" class="imgactiv" width="350" height="170"/>
+							<img src="C:/Users/azert/Documents/secondProjet/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="notredame" class="imgactiv3" width="450" height="220"/>
 							<h4>Notre-Dame-de-la-Garde</h4>
 						</a>
 					</div>
 					<div class="activite6">
 						<a href="index.html" id="parclongchamp">
-							<img src="C:/Users/azert/Documents/secondProjet/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="parclongchamp" class="imgactivv" width="350" height="170"/>
+							<img src="C:/Users/azert/Documents/secondProjet/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="parclongchamp" class="imgactiv4" width="450" height="220"/>
 							<h4>Parc Longchamp</h4>
 						</a>
 					</div>
