--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
 				<section class="hebergements"> 
 					<div class="boxhebergement">
 						<a href="index.html" id="aubergelacannebiere">
-							<img src="C:/Users/azert/Documents/secondProjet/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="aubergelacannebiere" class="imgheb" width="250" height="130"/>
+							<img src="C:/Users/azert/Documents/secondProjet/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="aubergelacannebiere" class="imgheb" width="320" height="180"/>
 							<h4>Auberge la Cannebière</h4>
 							<p>Nuit à partir de <strong>25€</strong>
-							<div class="etoiles">
+							<div class="etoilesheb">
                                 <div class="etoilebleu"><i class="fas fa-star"></i></div>
 		                        <div class="etoilebleu"><i class="fas fa-star"></i></div>
 		                        <div class="etoilebleu"><i class="fas fa-star"></i></div>
@@ -96,10 +96,10 @@
 
  					<div class="boxhebergement">
  						<a href="index.html" id="hotelduport">
- 							<img src="C:/Users/azert/Documents/secondProjet/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="hotelduport" class="imgheb" width="250" height="130"/>
+ 							<img src="C:/Users/azert/Documents/secondProjet/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="hotelduport" class="imgheb" width="320" height="180"/>
  							<h4>Hôtel du port</h4>
  							<p>Nuit à partir de 52<strong>€</strong></p>
- 							<div class="etoiles">
+ 							<div class="etoilesheb">
                                 <div class="etoilebleu"><i class="fas fa-star"></i></div>
 		                        <div class="etoilebleu"><i class="fas fa-star"></i></div>
 		                        <div class="etoilebleu"><i class="fas fa-star"></i></div>
@@ -111,10 +111,10 @@
 
  					<div class="boxhebergement">
  						<a href="index.html" id="hotellesmouettes">
- 							<img src="C:/Users/azert/Documents/secondProjet/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="hotellesmouettes" class="imgheb" width="250" height="130"/>
+ 							<img src="C:/Users/azert/Documents/secondProjet/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="hotellesmouettes" class="imgheb" width="320" height="180"/>
  							<h4>Hôtel Les Mouettes</h4>
  							<p>Nuit à partir de 76<strong>€</strong></p>
- 							<div class="etoiles">
+ 							<div class="etoilesheb">
                                 <div class="etoilebleu"><i class="fas fa-star"></i></div>
 		                        <div class="etoilebleu"><i class="fas fa-star"></i></div>
 		                        <div class="etoilebleu"><i class="fas fa-star"></i></div>
@@ -126,10 +126,10 @@
 
  					<div class="boxhebergement">
  						<a href="index.html" id="aubergedelamer">
- 							<img src="C:/Users/azert/Documents/secondProjet/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="aubergedelamer" class="imgheb" width="250" height="130"/>
+ 							<img src="C:/Users/azert/Documents/secondProjet/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="aubergedelamer" class="imgheb" width="320" height="180"/>
  							<h4>Auberge de la Mer</h4>
  							<p>Nuit à partir de <strong>46€</strong></p>
- 							<div class="etoiles">
+ 							<div class="etoilesheb">
                                 <div class="etoilebleu"><i class="fas fa-star"></i></div>
 		                        <div class="etoilebleu"><i class="fas fa-star"></i></div>
 		                        <div class="etoilebleu"><i class="fas fa-star"></i></div>
@@ -141,10 +141,10 @@
 
  					<div class="boxhebergement">
  						<a href="index.html" id="aubergelepanier">
- 							<img src="C:/Users/azert/Documents/secondProjet/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="aubergelepanier" class="imgheb" width="250" height="130"/>
+ 							<img src="C:/Users/azert/Documents/secondProjet/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="aubergelepanier" class="imgheb" width="320" height="180"/>
  							<h4>Auberge le Panier</h4>
  							<p>Nuit à partir de 23<strong>€</strong></p>
- 							<div class="etoiles">
+ 							<div class="etoilesheb">
                             	<div class="etoilebleu"><i class="fas fa-star"></i></div>
 		                        <div class="etoilebleu"><i class="fas fa-star"></i></div>
 		                        <div class="etoilebleu"><i class="fas fa-star"></i></div>
@@ -156,10 +156,10 @@
 
  					<div class="boxhebergement">
  						<a href="index.html" id="hotelchezamina">
- 							<img src="C:/Users/azert/Documents/secondProjet/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="hotelchezamina" class="imgheb" width="250" height="130"/>
+ 							<img src="C:/Users/azert/Documents/secondProjet/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="hotelchezamina" class="imgheb" width="320" height="180"/>
  							<h4>Hôtel chez Amina</h4>
  							<p>Nuit à partir de 96<strong>€</strong></p>
- 							<div class="etoiles">
+ 							<div class="etoilesheb">
                                 <div class="etoilebleu"><i class="fas fa-star"></i></div>
 		                        <div class="etoilebleu"><i class="fas fa-star"></i></div>
 		                        <div class="etoilebleu"><i class="fas fa-star"></i></div>
@@ -181,7 +181,7 @@
 					<div class="populaires">
 						<div class="boxpopulaire">
 							<a href="index.html" id="hotellesoleildumatin">
-								<img src="C:/Users/azert/Documents/secondProjet/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="hotellesoleildumatin" class="imagepopulaire" width="250" height="150"/>
+								<img src="C:/Users/azert/Documents/secondProjet/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="hotellesoleildumatin" class="imagepopulaire" width="200" height="185"/>
 								<div class="texte">
 									<h5>Hôtel Le soleil du matin</h5>
 									<p>Nuit à partir de 128<strong>€</strong>
@@ -198,7 +198,7 @@
 
  						<div class="boxpopulaire">
  							<a href="index.html" id="aucoeurdeleau">
- 								<img src="C:/Users/azert/Documents/secondProjet/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="aucoeurdeleau" class="imagepopulaire" width="250" height="150"/>
+ 								<img src="C:/Users/azert/Documents/secondProjet/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="aucoeurdeleau" class="imagepopulaire" width="200" height="185"/>
  								<div class="texte">
  									<h5>Au coeur de l'eau Chambres d'hôtes</h5>
  									<p>Nuit à partir de 71<strong>€</strong>
@@ -215,7 +215,7 @@
 
  						<div class="boxpopulaire">
  							<a href="index.html" id="hoteltoutbleuetblanc">
- 								<img src="C:/Users/azert/Documents/secondProjet/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="hoteltoutbleuetblanc" class="imagepopulaire" width="250" height="150"/>
+ 								<img src="C:/Users/azert/Documents/secondProjet/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="hoteltoutbleuetblanc" class="imagepopulaire" width="200" height="185"/>
  								<div class="texte">
  									<h5>Hôtel Tout bleu et Blanc</h5>
  									<p>Nuit à partir de 68<strong>€</strong></p>
@@ -240,7 +240,7 @@
 			<div class="activites">
 				<div class="activite1">
 					<a href="index.html" id="vieuxport">
-						<img src="C:/Users/azert/Documents/secondProjet/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="vieuxport" class="imgactivbig" width="450" height="550"/>
+						<img src="C:/Users/azert/Documents/secondProjet/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="vieuxport" class="imgactivbig" width="405" height="550"/>
 						<h4>Vieux Port</h4>
 					</a>
 				</div>
@@ -248,13 +248,13 @@
  				<div class="activite2et3">
  					<div class="activite2">
  						<a href="index.html" id="portdepomegues">
- 							<img src="C:/Users/azert/Documents/secondProjet/images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="portdepomegues" class="imgactiv1" width="450" height="230"/>
+ 							<img src="C:/Users/azert/Documents/secondProjet/images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="portdepomegues" class="imgactiv1" width="405" height="230"/>
  							<h4>Port de Pomègues</h4>
  						</a>
  					</div>
  					<div class="activite3">
  						<a href="index.html" id="ilesdufrioul">
- 							<img src="C:/Users/azert/Documents/secondProjet/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="ilesdufrioul" class="imgactiv2" width="450" height="170"/>
+ 							<img src="C:/Users/azert/Documents/secondProjet/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="ilesdufrioul" class="imgactiv2" width="405" height="170"/>
  							<h4>Iles du Frioul</h4>
  						</a>
  					</div>
@@ -262,7 +262,7 @@
 
  				<div class="activite4">
  					<a href="index.html" id="parcnational">
- 						<img src="C:/Users/azert/Documents/secondProjet/images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="parcnational" class="imgactivbig" width="450" height="550"/>
+ 						<img src="C:/Users/azert/Documents/secondProjet/images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="parcnational" class="imgactivbig" width="405" height="550"/>
  						<h4>Parc National des Calanques</h4>
  					</a>
  				</div>
@@ -270,13 +270,13 @@
 				<div class="activite5et6">
 					<div class="activite5">
 						<a href="index.html" id="notredame">
-							<img src="C:/Users/azert/Documents/secondProjet/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="notredame" class="imgactiv3" width="450" height="220"/>
+							<img src="C:/Users/azert/Documents/secondProjet/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="notredame" class="imgactiv3" width="405" height="220"/>
 							<h4>Notre-Dame-de-la-Garde</h4>
 						</a>
 					</div>
 					<div class="activite6">
 						<a href="index.html" id="parclongchamp">
-							<img src="C:/Users/azert/Documents/secondProjet/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="parclongchamp" class="imgactiv4" width="450" height="220"/>
+							<img src="C:/Users/azert/Documents/secondProjet/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="parclongchamp" class="imgactiv4" width="405" height="220"/>
 							<h4>Parc Longchamp</h4>
 						</a>
 					</div>
