--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 	<body>
 		<header>
-			<a href="index.html" id="logo"><img src="C:/Users/azert/Documents/secondProjet/images/logo/Reservia.svg" alt="logo" class="logo"></a>
+			<a href="index.html" id="logo"><img src="images/logo/Reservia.svg" alt="logo" class="logo"></a>
 			<div class="flex-container">
 				<nav>
 					<ul>
@@ -177,56 +177,50 @@
 					<div class="charticon">
                     	<i class="fas fa-chart-line"></i>
                 	</div>
-                </h3><br>
+                </h3>
 					<div class="populaires">
 						<div class="boxpopulaire">
 							<a href="index.html" id="hotellesoleildumatin">
 								<img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="hotellesoleildumatin" class="imagepopulaire"/>
-								<div class="texte">
-									<h5>Hôtel Le soleil du matin</h5>
-									<p>Nuit à partir de 128<strong>€</strong>
-									<div class="etoiles">
-                                		<div class="etoilebleu"><i class="fas fa-star"></i></div>
-		                            	<div class="etoilebleu"><i class="fas fa-star"></i></div>
-		                            	<div class="etoilebleu"><i class="fas fa-star"></i></div>
-		                            	<div class="etoilebleu"><i class="fas fa-star"></i></div>	
-                                		<div class="etoilebleu"><i class="fas fa-star"></i></div>	
-                            		</div> 
-                            	</div>
+								<h5>Hôtel Le soleil du matin</h5>
+								<p>Nuit à partir de 128<strong>€</strong>
+								<div class="etoiles">
+                                	<div class="etoilebleu"><i class="fas fa-star"></i></div>
+		                            <div class="etoilebleu"><i class="fas fa-star"></i></div>
+		                            <div class="etoilebleu"><i class="fas fa-star"></i></div>
+		                            <div class="etoilebleu"><i class="fas fa-star"></i></div>	
+                                	<div class="etoilebleu"><i class="fas fa-star"></i></div>	
+                            	</div> 
 							</a>
 						</div>
 
  						<div class="boxpopulaire">
  							<a href="index.html" id="aucoeurdeleau">
  								<img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="aucoeurdeleau" class="imagepopulaire"/>
- 								<div class="texte">
- 									<h5>Au coeur de l'eau Chambres d'hôtes</h5>
- 									<p>Nuit à partir de 71<strong>€</strong>
- 									<div class="etoiles">
-                                		<div class="etoilebleu"><i class="fas fa-star"></i></div>
-		                            	<div class="etoilebleu"><i class="fas fa-star"></i></div>
-		                            	<div class="etoilebleu"><i class="fas fa-star"></i></div>
-		                            	<div class="etoilebleu"><i class="fas fa-star"></i></div>	
-                                		<div class="etoilegrise"><i class="fas fa-star"></i></div>
-                            		</div>
-                            	</div> 
+ 								<h5>Au coeur de l'eau Chambres d'hôtes</h5>
+ 								<p>Nuit à partir de 71<strong>€</strong>
+ 								<div class="etoiles">
+                                	<div class="etoilebleu"><i class="fas fa-star"></i></div>
+		                            <div class="etoilebleu"><i class="fas fa-star"></i></div>
+		                            <div class="etoilebleu"><i class="fas fa-star"></i></div>
+		                            <div class="etoilebleu"><i class="fas fa-star"></i></div>	
+                                	<div class="etoilegrise"><i class="fas fa-star"></i></div>
+                            	</div>
  							</a>
  						</div>
 
  						<div class="boxpopulaire">
  							<a href="index.html" id="hoteltoutbleuetblanc">
  								<img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="hoteltoutbleuetblanc" class="imagepopulaire"/>
- 								<div class="texte">
- 									<h5>Hôtel Tout bleu et Blanc</h5>
- 									<p>Nuit à partir de 68<strong>€</strong></p>
- 									<div class="etoiles">
-                                		<div class="etoilebleu"><i class="fas fa-star"></i></div>
-		                            	<div class="etoilebleu"><i class="fas fa-star"></i></div>
-		                            	<div class="etoilebleu"><i class="fas fa-star"></i></div>
-		                           		<div class="etoilebleu"><i class="fas fa-star"></i></div>	
-                                		<div class="etoilegrise"><i class="fas fa-star"></i></div>
-                            		</div> 
-                            	</div>
+ 								<h5>Hôtel Tout bleu et Blanc</h5>
+ 								<p>Nuit à partir de 68<strong>€</strong></p>
+ 								<div class="etoiles">
+                                	<div class="etoilebleu"><i class="fas fa-star"></i></div>
+		                            <div class="etoilebleu"><i class="fas fa-star"></i></div>
+		                            <div class="etoilebleu"><i class="fas fa-star"></i></div>
+		                           	<div class="etoilebleu"><i class="fas fa-star"></i></div>	
+                                	<div class="etoilegrise"><i class="fas fa-star"></i></div>
+                            	</div> 
  							</a>
  						</div>
  					</div>
