--- a/index.html
+++ b/index.html
@@ -173,57 +173,59 @@
  			</div>
 
 			<aside class="lespluspopulaires">
-				<h3 class="h3pop">Les plus populaires
+				<div class="poptitle">
+					<h3>Les plus populaires</h3>
 					<div class="charticon">
-                    	<i class="fas fa-chart-line"></i>
+                   		<i class="fas fa-chart-line"></i>
                 	</div>
-                </h3>
-					<div class="populaires">
-						<div class="boxpopulaire">
-							<a href="index.html" id="hotellesoleildumatin">
-								<img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="hotellesoleildumatin" class="imagepopulaire"/>
-								<h5>Hôtel Le soleil du matin</h5>
-								<p>Nuit à partir de 128<strong>€</strong>
-								<div class="etoiles">
-                                	<div class="etoilebleu"><i class="fas fa-star"></i></div>
-		                            <div class="etoilebleu"><i class="fas fa-star"></i></div>
-		                            <div class="etoilebleu"><i class="fas fa-star"></i></div>
-		                            <div class="etoilebleu"><i class="fas fa-star"></i></div>	
-                                	<div class="etoilebleu"><i class="fas fa-star"></i></div>	
-                            	</div> 
-							</a>
-						</div>
+                </div>
+                
+				<div class="populaires">
+					<div class="boxpopulaire">
+						<a href="index.html" id="hotellesoleildumatin">
+							<img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="hotellesoleildumatin" class="imagepopulaire"/>
+							<h5>Hôtel Le soleil du matin</h5>
+							<p>Nuit à partir de 128<strong>€</strong>
+							<div class="etoiles">
+                                <div class="etoilebleu"><i class="fas fa-star"></i></div>
+		                        <div class="etoilebleu"><i class="fas fa-star"></i></div>
+		                        <div class="etoilebleu"><i class="fas fa-star"></i></div>
+		                        <div class="etoilebleu"><i class="fas fa-star"></i></div>	
+                               	<div class="etoilebleu"><i class="fas fa-star"></i></div>	
+                            </div> 
+						</a>
+					</div>
 
- 						<div class="boxpopulaire">
- 							<a href="index.html" id="aucoeurdeleau">
- 								<img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="aucoeurdeleau" class="imagepopulaire"/>
- 								<h5>Au coeur de l'eau Chambres d'hôtes</h5>
- 								<p>Nuit à partir de 71<strong>€</strong>
- 								<div class="etoiles">
-                                	<div class="etoilebleu"><i class="fas fa-star"></i></div>
-		                            <div class="etoilebleu"><i class="fas fa-star"></i></div>
-		                            <div class="etoilebleu"><i class="fas fa-star"></i></div>
-		                            <div class="etoilebleu"><i class="fas fa-star"></i></div>	
-                                	<div class="etoilegrise"><i class="fas fa-star"></i></div>
-                            	</div>
- 							</a>
- 						</div>
-
- 						<div class="boxpopulaire">
- 							<a href="index.html" id="hoteltoutbleuetblanc">
- 								<img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="hoteltoutbleuetblanc" class="imagepopulaire"/>
- 								<h5>Hôtel Tout bleu et Blanc</h5>
- 								<p>Nuit à partir de 68<strong>€</strong></p>
- 								<div class="etoiles">
-                                	<div class="etoilebleu"><i class="fas fa-star"></i></div>
-		                            <div class="etoilebleu"><i class="fas fa-star"></i></div>
-		                            <div class="etoilebleu"><i class="fas fa-star"></i></div>
-		                           	<div class="etoilebleu"><i class="fas fa-star"></i></div>	
-                                	<div class="etoilegrise"><i class="fas fa-star"></i></div>
-                            	</div> 
- 							</a>
- 						</div>
+ 					<div class="boxpopulaire">
+ 						<a href="index.html" id="aucoeurdeleau">
+ 							<img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="aucoeurdeleau" class="imagepopulaire"/>
+ 							<h5>Au coeur de l'eau Chambres d'hôtes</h5>
+ 							<p>Nuit à partir de 71<strong>€</strong>
+ 							<div class="etoiles">
+                                <div class="etoilebleu"><i class="fas fa-star"></i></div>
+		                        <div class="etoilebleu"><i class="fas fa-star"></i></div>
+		                        <div class="etoilebleu"><i class="fas fa-star"></i></div>
+		                        <div class="etoilebleu"><i class="fas fa-star"></i></div>	
+                                <div class="etoilegrise"><i class="fas fa-star"></i></div>
+                            </div>
+ 						</a>
  					</div>
+
+ 					<div class="boxpopulaire">
+ 						<a href="index.html" id="hoteltoutbleuetblanc">
+ 							<img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="hoteltoutbleuetblanc" class="imagepopulaire"/>
+ 							<h5>Hôtel Tout bleu et Blanc</h5>
+ 							<p>Nuit à partir de 68<strong>€</strong></p>
+ 							<div class="etoiles">
+                                <div class="etoilebleu"><i class="fas fa-star"></i></div>
+		                        <div class="etoilebleu"><i class="fas fa-star"></i></div>
+		                        <div class="etoilebleu"><i class="fas fa-star"></i></div>
+		                        <div class="etoilebleu"><i class="fas fa-star"></i></div>	
+                                <div class="etoilegrise"><i class="fas fa-star"></i></div>
+                            </div> 
+ 						</a>
+ 					</div>
+ 				</div>
 			</aside>
 		</main>
 
