--- a/index.html
+++ b/index.html
@@ -28,8 +28,11 @@
 
  			<div class="search">
         		<div class="mapmarker"><i class="fas fa-map-marker-alt"></i></div>
-        		<input class="searchfield" type="search" placeholder="Marseille, France"/>
-        		<input class="searchbutton" type="submit" value="Rechercher">
+        		<div class="research">
+        			<input class="searchfield" type="search" placeholder="Marseille, France"/>
+        			<input class="searchbutton" type="submit" value="Rechercher">
+        			<button class="searchfa" type="submit" value="Rechercher"><i class="fas fa-search"></i></button>
+        		</div>
     		</div>
     	</section>
 
