--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="styles.css">
 		<title>Réservia</title>
 		<script src="https://kit.fontawesome.com/45e38e596f.js" crossorigin="anonymous"></script>
-		<meta name="viewport" content="width=device-width">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 
 	<body>
