--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="styles.css">
 		<title>Réservia</title>
 		<script src="https://kit.fontawesome.com/45e38e596f.js" crossorigin="anonymous"></script>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, minimum-scale=1.0"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=4.0, minimum-scale=1.0"/>
 	</head>
 
 	<body>
@@ -14,8 +14,8 @@
 			<div class="flex-container">
 				<nav>
 					<ul>
-						<li class="menuheb"><a href="#hebergements">Hébergements</a></li>
-                    	<li class="menuactiv"><a href="#activitesection">Activités</a></li>
+						<li class="menu"><a href="#hebergements">Hébergements</a></li>
+                    	<li class="menu"><a href="#activitesection">Activités</a></li>
                 	</ul>  
             	</nav>
             
