--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
  					</ul>
  				</div>
 
- 			<div class="noshebergements">*
+ 			<div class="noshebergements">
  				<h5>Nos hébergements</h5>
  					<ul>
  						<li>Charte qualité</li>
