--- a/index.html
+++ b/index.html
@@ -239,47 +239,51 @@
 			<h3>Activités à Marseille</h3>
 			<div class="activites">
 				<div class="activite1">
-					<a href="index.html" id="vieuxport">
-						<img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="vieuxport" class="imgactivbig"/>
-						<h4>Vieux Port</h4>
-					</a>
+					<figure class="box1">
+						<a href="index.html" id="vieuxport">
+							<img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="vieuxport" class="imgactiv1"/>
+							<h4>Vieux Port</h4>
+						</a>
+					</figure>
 				</div>
 
- 				<div class="activite2et3">
- 					<div class="activite2">
+ 				<div class="activite2=">
+ 					<figure class="box2">
  						<a href="index.html" id="portdepomegues">
- 							<img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="portdepomegues" class="imgactiv1"/>
+ 							<img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="portdepomegues" class="imgactiv2"/>
  							<h4>Port de Pomègues</h4>
  						</a>
- 					</div>
- 					<div class="activite3">
+ 					</figure>
+ 					<figure class="box3">
  						<a href="index.html" id="ilesdufrioul">
- 							<img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="ilesdufrioul" class="imgactiv2"/>
+ 							<img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="ilesdufrioul" class="imgactiv3"/>
  							<h4>Iles du Frioul</h4>
  						</a>
- 					</div>
+ 					</figure>
  				</div>
 
- 				<div class="activite4">
- 					<a href="index.html" id="parcnational">
- 						<img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="parcnational" class="imgactivbig"/>
- 						<h4>Parc National des Calanques</h4>
- 					</a>
+ 				<div class="activite1">
+ 					<figure class="box1">
+ 						<a href="index.html" id="parcnational">
+ 							<img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="parcnational" class="imgactiv1"/>
+ 							<h4>Parc National des Calanques</h4>
+ 						</a>
+ 					</figure>
  				</div>
 
-				<div class="activite5et6">
-					<div class="activite5">
+				<div class="activite2">
+					<figure class="box1">
 						<a href="index.html" id="notredame">
-							<img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="notredame" class="imgactiv3"/>
+							<img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="notredame" class="imgactiv2"/>
 							<h4>Notre-Dame-de-la-Garde</h4>
 						</a>
-					</div>
-					<div class="activite6">
+					</figure>
+					<figure class="box2">
 						<a href="index.html" id="parclongchamp">
-							<img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="parclongchamp" class="imgactiv4"/>
+							<img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="parclongchamp" class="imgactiv3"/>
 							<h4>Parc Longchamp</h4>
 						</a>
-					</div>
+					</figure>
 				</div>
 			</div>
 		</section>
