--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 					</figure>
 				</div>
 
- 				<div class="activite2=">
+ 				<div class="activite2">
  					<figure class="box2">
  						<a href="index.html" id="portdepomegues">
  							<img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="portdepomegues" class="imgactiv2"/>
@@ -272,13 +272,13 @@
  				</div>
 
 				<div class="activite2">
-					<figure class="box1">
+					<figure class="box2">
 						<a href="index.html" id="notredame">
 							<img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="notredame" class="imgactiv2"/>
 							<h4>Notre-Dame-de-la-Garde</h4>
 						</a>
 					</figure>
-					<figure class="box2">
+					<figure class="box3">
 						<a href="index.html" id="parclongchamp">
 							<img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="parclongchamp" class="imgactiv3"/>
 							<h4>Parc Longchamp</h4>
