--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     		</div>
     	</section>
 
-
-		<div class="filters">
+<!-- Section 2  -->
+		<section class="filters">
 			<h2 class="filtres">Filtres</h2>
 			<div class="category-head">
 				<div class="icontextfilters">
@@ -69,7 +69,7 @@
 					<div class="filterdescription">Animaux Autorisés</div>
 				</div>
 			</div>
-		</div>
+		</section>
 
 		<div class="info">
 			<span class="iconinfo"><i class="fas fa-info" aria-hidden="true"></i></span>
@@ -77,7 +77,7 @@
 		</div>
 		
 
-	<!-- Section 2 -->
+	<!-- Section 3 -->
 
 		<main>
 			<div class="container">
@@ -233,7 +233,7 @@
 			</aside>
 		</main>
 
-<!-- Section 3  -->
+<!-- Section 4  -->
 
 		<section id="activitesection">
 			<h3>Activités à Marseille</h3>
